[package]
authors = [
"viewpointics-tan <viewpointicstan@gmail.com>"
]
categories = []
description = "This is a piano based on yew."
edition = "2018"
keywords = ["yew","midi","web","piano"]
license = "MIT"
name = "piano_with_yew"
readme = "README.md"
repository = "https://github.com/viewpointics-tan/piano_with_yew"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "^0.2"
yew = "0.17"
